Changed: updates logic

--- a/app/src/main/res/drawable/ic_valid_cert.xml
+++ b/app/src/main/res/drawable/ic_valid_cert.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
    ~ license-start
    ~ 
    ~ Copyright (C) 2021 Ministero della Salute and all other contributors
@@ -17,16 +18,11 @@
 -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="32dp"
-    android:height="32dp"
-    android:viewportWidth="32"
-    android:viewportHeight="32">
+    android:width="128dp"
+    android:height="95dp"
+    android:viewportWidth="128"
+    android:viewportHeight="95">
   <path
-      android:pathData="m16,2c-7.7,0 -14,6.3 -14,14s6.3,14 14,14s14,-6.3 14,-14c0,-7.7 -6.3,-14 -14,-14zM14.9,8l2.2,0l0,11l-2.2,0l0,-11zM16,25c-0.8,0 -1.5,-0.7 -1.5,-1.5s0.7,-1.5 1.5,-1.5c0.8,0 1.5,0.7 1.5,1.5s-0.7,1.5 -1.5,1.5z"
-      android:fillColor="#f45656"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m17.5,23.5c0,0.8 -0.7,1.5 -1.5,1.5c-0.8,0 -1.5,-0.7 -1.5,-1.5s0.7,-1.5 1.5,-1.5c0.8,0 1.5,0.7 1.5,1.5zM17.1,8l-2.2,0l0,11l2.2,0l0,-11z"
-      android:strokeAlpha="0"
-      android:fillAlpha="0"/>
+      android:pathData="M43.474,93.134L1.874,51.731C-0.625,49.243 -0.625,45.21 1.874,42.723L10.925,33.714C13.425,31.227 17.477,31.227 19.976,33.714L48,61.605L108.024,1.866C110.523,-0.622 114.576,-0.622 117.075,1.866L126.126,10.874C128.625,13.361 128.625,17.394 126.126,19.882L52.526,93.134C50.026,95.622 45.974,95.622 43.474,93.134Z"
+      android:fillColor="#008933"/>
 </vector>
