--- a/app/src/main/res/drawable/ic_arrow_back.xml
+++ b/app/src/main/res/drawable/ic_arrow_back.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
    ~ license-start
    ~ 
    ~ Copyright (C) 2021 Ministero della Salute and all other contributors
@@ -17,16 +18,12 @@
 -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="32dp"
-    android:height="32dp"
-    android:viewportWidth="32"
-    android:viewportHeight="32">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24"
+    android:tint="?attr/colorControlNormal">
   <path
-      android:pathData="m16,2c-7.7,0 -14,6.3 -14,14s6.3,14 14,14s14,-6.3 14,-14c0,-7.7 -6.3,-14 -14,-14zM14.9,8l2.2,0l0,11l-2.2,0l0,-11zM16,25c-0.8,0 -1.5,-0.7 -1.5,-1.5s0.7,-1.5 1.5,-1.5c0.8,0 1.5,0.7 1.5,1.5s-0.7,1.5 -1.5,1.5z"
-      android:fillColor="#f45656"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m17.5,23.5c0,0.8 -0.7,1.5 -1.5,1.5c-0.8,0 -1.5,-0.7 -1.5,-1.5s0.7,-1.5 1.5,-1.5c0.8,0 1.5,0.7 1.5,1.5zM17.1,8l-2.2,0l0,11l2.2,0l0,-11z"
-      android:strokeAlpha="0"
-      android:fillAlpha="0"/>
+      android:fillColor="@android:color/white"
+      android:pathData="M15.41,16.59L10.83,12l4.58,-4.59L14,6l-6,6 6,6 1.41,-1.41z"/>
 </vector>
