--- a/app/src/main/res/layout/fragment_verification_new.xml
+++ b/app/src/main/res/layout/fragment_verification_new.xml
@@ -165,6 +165,8 @@
                                     android:textColor="@color/blue_dark" />
 
                                 <TextView
+                                    android:id="@+id/vaccineTypeTitle"
+
                                     style="@style/H3.Black.Bold"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
@@ -182,6 +184,7 @@
 
 
                                 <TextView
+                                    android:id="@+id/dateVaccinationTitle"
                                     style="@style/H3.Black.Bold"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
@@ -198,6 +201,7 @@
                                     android:textColor="@color/blue_dark" />
 
                                 <TextView
+                                    android:id="@+id/numberOFVaccinesTitle"
                                     style="@style/H3.Black.Bold"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
@@ -218,14 +222,14 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="16dp"
-                                    android:visibility="gone"
+                                    android:visibility="visible"
                                     android:text="Data scadenza"
                                     android:textColor="@color/blue_dark" />
 
                                 <TextView
                                     android:id="@+id/expireDate"
                                     style="@style/H3.Black"
-                                    android:visibility="gone"
+                                    android:visibility="visible"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="4dp"
