--- a/app/src/main/res/layout/fragment_verification_new.xml
+++ b/app/src/main/res/layout/fragment_verification_new.xml
@@ -53,7 +53,6 @@
                 android:id="@+id/topCon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:orientation="vertical">
 
 
@@ -61,7 +60,7 @@
                     android:id="@+id/maincard"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginHorizontal="@dimen/margin_16dp"
+                    android:layout_marginHorizontal="8dp"
                     app:cardBackgroundColor="@color/white"
                     app:cardCornerRadius="4dp"
                     app:layout_constraintStart_toStartOf="parent">
@@ -72,31 +71,42 @@
                         android:paddingTop="@dimen/padding_16dp">
 
 
-                        <ImageButton
-                            android:id="@+id/checkmark"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
-                            android:layout_marginStart="20dp"
-                            android:layout_marginTop="8dp"
-                            android:background="@android:color/transparent"
-                            android:padding="@dimen/padding_10dp"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            tools:background="@drawable/ic_valid_cert" />
-
-                        <TextView
-                            android:id="@+id/certificate_valid"
-                            style="@style/H1"
-                            android:layout_marginStart="20dp"
-                            android:layout_width="377dp"
+                        <androidx.appcompat.widget.LinearLayoutCompat
+                            android:id="@+id/linearLayoutCompat2"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/titiliumfont"
-                            android:textColor="@color/blue_dark"
-                            android:textSize="18sp"
-                            app:layout_constraintBottom_toBottomOf="@+id/checkmark"
-                            app:layout_constraintStart_toEndOf="@+id/checkmark"
-                            app:layout_constraintTop_toTopOf="parent"
-                            tools:text="Certificazione valida per l'Italia" />
+                            android:orientation="horizontal"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
+
+                            <ImageButton
+                                android:id="@+id/checkmark"
+                                android:layout_width="36dp"
+                                android:layout_height="36dp"
+                                android:layout_marginStart="20dp"
+                                android:layout_marginTop="8dp"
+                                android:background="@android:color/transparent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                tools:background="@drawable/ic_valid_cert" />
+
+                            <TextView
+                                android:id="@+id/certificate_valid"
+                                style="@style/H1"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginStart="20dp"
+                                android:fontFamily="@font/titiliumfont"
+                                android:textColor="@color/blue_dark"
+                                android:textSize="18sp"
+                                app:layout_constraintBottom_toBottomOf="@+id/checkmark"
+                                app:layout_constraintStart_toEndOf="@+id/checkmark"
+                                app:layout_constraintTop_toTopOf="parent"
+                                tools:text="Certificazione valida per l'Italia" />
+
+
+                        </androidx.appcompat.widget.LinearLayoutCompat>
 
 
                         <LinearLayout
@@ -106,19 +116,30 @@
                             android:layout_marginHorizontal="@dimen/margin_24dp"
                             android:layout_marginStart="24dp"
                             android:layout_marginEnd="24dp"
-                            android:layout_marginTop="14dp"
                             android:orientation="vertical"
                             android:visibility="visible"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/checkmark"
+                            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2"
                             tools:visibility="visible">
 
+                            <FrameLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
                             <ImageView
                                 android:id="@+id/qrcodeImage"
                                 android:layout_width="match_parent"
-                                android:layout_height="150dp"
+                                android:layout_height="130dp"
                                 android:scaleType="fitCenter" />
+
+                                <View
+                                    android:layout_gravity="center"
+                                    android:layout_width="40dp"
+                                    android:background="@color/white"
+                                    android:backgroundTint="@color/white"
+                                    android:layout_height="40dp"/>
+
+                            </FrameLayout>
 
                             <TextView
                                 android:layout_width="match_parent"
@@ -222,33 +243,37 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="16dp"
-                                    android:visibility="visible"
                                     android:text="Data scadenza"
-                                    android:textColor="@color/blue_dark" />
+                                    android:textColor="@color/blue_dark"
+                                    android:visibility="visible" />
 
                                 <TextView
                                     android:id="@+id/expireDate"
                                     style="@style/H3.Black"
-                                    android:visibility="visible"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="4dp"
                                     android:text=""
-                                    android:textColor="@color/blue_dark" />
+                                    android:textColor="@color/blue_dark"
+                                    android:visibility="visible" />
 
-                                <com.google.android.material.button.MaterialButton
-                                    android:id="@+id/delete"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="start"
-                                    android:layout_marginTop="10dp"
-                                    android:layout_marginBottom="40dp"
-                                    android:text="Elimina" />
 
                             </LinearLayout>
 
                         </LinearLayout>
 
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/delete"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="start"
+                            android:layout_marginStart="26dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginBottom="16dp"
+                            android:text="Elimina"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/container_custom_person_details" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
